; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_dn_sched_rr.c_rr_append.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netpfil/ipfw/extr_dn_sched_rr.c_rr_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rr_queue = type { i32, %struct.rr_queue*, i32, i32 }
%struct.rr_si = type { %struct.rr_queue*, %struct.rr_queue* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rr_queue*, %struct.rr_si*)* @rr_append to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rr_append(%struct.rr_queue* %0, %struct.rr_si* %1) #0 {
  %3 = alloca %struct.rr_queue*, align 8
  %4 = alloca %struct.rr_si*, align 8
  store %struct.rr_queue* %0, %struct.rr_queue** %3, align 8
  store %struct.rr_si* %1, %struct.rr_si** %4, align 8
  %5 = load %struct.rr_queue*, %struct.rr_queue** %3, align 8
  %6 = getelementptr inbounds %struct.rr_queue, %struct.rr_queue* %5, i32 0, i32 0
  store i32 1, i32* %6, align 8
  %7 = load %struct.rr_queue*, %struct.rr_queue** %3, align 8
  %8 = getelementptr inbounds %struct.rr_queue, %struct.rr_queue* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.rr_queue*, %struct.rr_queue** %3, align 8
  %11 = getelementptr inbounds %struct.rr_queue, %struct.rr_queue* %10, i32 0, i32 3
  store i32 %9, i32* %11, align 4
  %12 = load %struct.rr_si*, %struct.rr_si** %4, align 8
  %13 = getelementptr inbounds %struct.rr_si, %struct.rr_si* %12, i32 0, i32 0
  %14 = load %struct.rr_queue*, %struct.rr_queue** %13, align 8
  %15 = icmp eq %struct.rr_queue* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load %struct.rr_queue*, %struct.rr_queue** %3, align 8
  %18 = load %struct.rr_si*, %struct.rr_si** %4, align 8
  %19 = getelementptr inbounds %struct.rr_si, %struct.rr_si* %18, i32 0, i32 0
  store %struct.rr_queue* %17, %struct.rr_queue** %19, align 8
  br label %26

20:                                               ; preds = %2
  %21 = load %struct.rr_queue*, %struct.rr_queue** %3, align 8
  %22 = load %struct.rr_si*, %struct.rr_si** %4, align 8
  %23 = getelementptr inbounds %struct.rr_si, %struct.rr_si* %22, i32 0, i32 1
  %24 = load %struct.rr_queue*, %struct.rr_queue** %23, align 8
  %25 = getelementptr inbounds %struct.rr_queue, %struct.rr_queue* %24, i32 0, i32 1
  store %struct.rr_queue* %21, %struct.rr_queue** %25, align 8
  br label %26

26:                                               ; preds = %20, %16
  %27 = load %struct.rr_queue*, %struct.rr_queue** %3, align 8
  %28 = load %struct.rr_si*, %struct.rr_si** %4, align 8
  %29 = getelementptr inbounds %struct.rr_si, %struct.rr_si* %28, i32 0, i32 1
  store %struct.rr_queue* %27, %struct.rr_queue** %29, align 8
  %30 = load %struct.rr_si*, %struct.rr_si** %4, align 8
  %31 = getelementptr inbounds %struct.rr_si, %struct.rr_si* %30, i32 0, i32 0
  %32 = load %struct.rr_queue*, %struct.rr_queue** %31, align 8
  %33 = load %struct.rr_queue*, %struct.rr_queue** %3, align 8
  %34 = getelementptr inbounds %struct.rr_queue, %struct.rr_queue* %33, i32 0, i32 1
  store %struct.rr_queue* %32, %struct.rr_queue** %34, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
